# pxmon

./: .buildlog  .buildlog2  .editorconfig  .env.example  .gitattributes  .gitignore  Anchor.toml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  generate-commits.sh  rust-toolchain.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  SUPPORT.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
agents/: requirements.txt  setup.py
agents/src/: __init__.py  agent.py
agents/src/models/: __init__.py  agent_state.py  battle_result.py  monster.py
agents/src/strategies/: __init__.py  aggressive.py  balanced.py  base.py  collector.py  speedrunner.py
agents/src/utils/: __init__.py  rng.py  type_chart.py  xp_calculator.py
agents/tests/: test_agent.py  test_battle.py  test_strategies.py
api/: package.json
api/src/: index.ts
api/src/middleware/: auth.ts  rate-limit.ts
api/src/routes/: agents.ts  clock.ts  events.ts
api/src/services/: agent-service.ts  backup.ts  battle-service.ts  event-bus.ts
api/tests/: agents.test.ts  battle.test.ts
cli/: package.json
cli/src/: index.ts
docs/: architecture.md  game-mechanics.md
programs/pxmon/: Cargo.toml
programs/pxmon/src/: errors.rs  events.rs  lib.rs  state.rs
programs/pxmon/src/instructions/: battle.rs  catch_monster.rs  evolve.rs  gym_challenge.rs  mod.rs  register_agent.rs  trade.rs
scripts/: deploy-program.sh  generate-trainers.js
sdk/: jest.config.js  package.json  tsconfig.json
sdk/src/: client.ts  constants.ts  index.ts
sdk/src/agents/: agent-runner.ts  battle-simulator.ts  strategy.ts
sdk/src/types/: index.ts  instructions.ts
sdk/src/utils/: logger.ts  monster-data.ts  rng.ts  type-chart.ts
sdk/tests/: battle.test.ts  client.test.ts  strategy.test.ts
