[workspace]
members = [
    "programs/pxmon",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["pxmon core"]
license = "MIT"
repository = "https://github.com/pxmoncom/pxmon"
homepage = "https://pxmon.com"
readme = "README.md"
rust-version = "1.78"
description = "PXMON - AI agent monster RPG on Solana. On-chain program for agent state, battles, and rewards."
keywords = ["solana", "anchor", "ai-agent", "rpg", "web3"]
categories = ["cryptography", "games", "network-programming"]

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
solana-program = "=1.18.26"
borsh = "1.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
