[package]
name = "pxmon"
version = "0.1.0"
description = "PXMON On-Chain Monster RPG Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pxmon"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"